RESOLVED FIXED256439
REGRESSION (244038@main): toPKShippingMethods() causes leaks by returning retained object unexpectedly
https://bugs.webkit.org/show_bug.cgi?id=256439
Summary REGRESSION (244038@main): toPKShippingMethods() causes leaks by returning ret...
David Kilzer (:ddkilzer)
Reported 2023-05-07 20:33:03 PDT
toPKShippingMethods() causes leaks by returning retained object unexpectedly. Method is defined in Source/WebKit/Shared/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm. Regressed in: REGRESSION(r271735): PaymentShippingOption.selected ignored <https://bugs.webkit.org/show_bug.cgi?id=221960> <rdar://problem/73464404> <https://commits.webkit.org/244038@main>
Attachments
Radar WebKit Bug Importer
Comment 1 2023-05-07 20:33:31 PDT
David Kilzer (:ddkilzer)
Comment 2 2023-05-07 20:38:21 PDT
EWS
Comment 3 2023-05-08 01:26:56 PDT
Committed 263788@main (fc81fe749d70): <https://commits.webkit.org/263788@main> Reviewed commits have been landed. Closing PR #13560 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.