REGRESSION (244038@main): toPKShippingMethods() causes leaks by returning retained object unexpectedly https://bugs.webkit.org/show_bug.cgi?id=256439 <rdar://109023223>

Reviewed by Wenson Hsieh and Devin Rousso.

* Source/WebKit/Shared/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
(WebKit::toPKShippingMethods):
- Adopt and autorelease the return value to fix the leak.

Canonical link: https://commits.webkit.org/263788@main